samples/_failures_safe/1761452010_11c92d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36b256fd.c: In function ‘main’:
./samples/SAFE/__tmp_36b256fd.c:146:42: error: expected ‘)’ at end of input
  146 |         add_edge(&g, i, src, dest, weight
      |                 ~                        ^
      |                                          )
./samples/SAFE/__tmp_36b256fd.c:146:9: error: expected declaration or statement at end of input
  146 |         add_edge(&g, i, src, dest, weight
      |         ^~~~~~~~
./samples/SAFE/__tmp_36b256fd.c:146:9: error: expected declaration or statement at end of input
